--- a/AccessGallery/package.json
+++ b/AccessGallery/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gallery",
+  "name": "AccessGallery",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -20,22 +20,12 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.11.0",
-    "@ionic-native/crop": "^4.11.0",
-    "@ionic-native/file": "^4.12.0",
-    "@ionic-native/image-picker": "^4.11.0",
-    "@ionic-native/media-capture": "^4.12.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
+    "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
-    "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-crop": "^0.4.0",
-    "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-media-capture": "^3.0.2",
-    "firebase": "^5.3.1",
     "ionic-angular": "3.9.2",
-    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -45,13 +35,5 @@
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-crop": {},
-      "cordova-plugin-camera": {},
-      "cordova-plugin-file": {},
-      "cordova-plugin-media-capture": {}
-    }
-  }
+  "description": "An Ionic project"
 }
